--- a/LCL/DESCRIPTION
+++ b/LCL/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: LCL
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Tools for use with LCL Telepath
+Version: 0.15
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Alessandro",
+           family = "Gerada",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "alessandro.gerada@rlbuht.nhs.uk")
+Description: Various tools and dataframes for use in particular with data imported from LCL Telepath. 
 License: `use_mit_license()`, `use_gpl3_license()` or friends to
     pick a license
 Encoding: UTF-8
@@ -18,3 +17,5 @@ Imports:
     magrittr, 
     stringr, 
     readr
+Depends: 
+    R (>= 2.10)
