--- a/LCL/NAMESPACE
+++ b/LCL/NAMESPACE
@@ -6,3 +6,9 @@ export(convert_org)
 export(make_cpe_flextable)
 export(make_cpe_table)
 export(pull_data)
+import(AMR)
+import(RODBC)
+import(flextable)
+import(glue)
+import(lubridate)
+import(tidyverse)
