--- a/LCL/DESCRIPTION
+++ b/LCL/DESCRIPTION
@@ -14,9 +14,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    magrittr, 
-    stringr, 
-    readr, 
+    tidyverse, 
     RODBC, 
     AMR, 
     flextable, 
