--- a/LCL/DESCRIPTION
+++ b/LCL/DESCRIPTION
@@ -14,7 +14,10 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    tidyverse, 
+    tidyr,
+    magrittr,
+    stringr, 
+    dplyr, 
     RODBC, 
     AMR, 
     flextable, 
